--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,14 +5,14 @@ logback = "1.4.14"
 mongo = "4.10.2"
 koin-version = "4.1.0-Beta1"
 kmongo = "5.2.0"
+exposed = "0.55.0"
+postgresql = "42.7.4"
+hikaricp = "5.1.0"
 
 [libraries]
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
-mongodb-driver-core = { module = "org.mongodb:mongodb-driver-core", version.ref = "mongo" }
-mongodb-driver-sync = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongo" }
-bson = { module = "org.mongodb:bson", version.ref = "mongo" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 ktor-server-config-yaml = { module = "io.ktor:ktor-server-config-yaml", version.ref = "ktor" }
@@ -21,10 +21,13 @@ kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-version" }
 koin-ktor3 = { module = "io.insert-koin:koin-ktor3", version.ref = "koin-version" }
 koin-logger-slf4j = { module = "io.insert-koin:koin-logger-slf4j", version.ref = "koin-version" }
-kmongo-core = { module = "org.litote.kmongo:kmongo-coroutine-core", version.ref = "kmongo" }
-kmongo-async = { module = "org.litote.kmongo:kmongo-async", version.ref = "kmongo" }
 koin-test-junit5 = { module = "io.insert-koin:koin-test-junit5", version.ref = "koin-version" }
-kmongo-coroutine = { module = "org.litote.kmongo:kmongo-coroutine", version.ref = "kmongo" }
+exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
+exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
+exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
+exposed-kotlinx-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
+postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
+hikaricp = { module = "com.zaxxer:HikariCP", version.ref = "hikaricp" }
 
 
 [plugins]
